Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127865

Crash When Dragging Sections Between Different Header Views

XMLWordPrintable

    • 204649742 (dev), b2666d3d3 (6.8)

      A crash occurs when a section is dragged to a different header view.

      Steps to Reproduce:

      • Run the spreadsheet example.
      • Drag row number 3 and drop it into column "C".
      • Drag column "C" and drop it into row number 3.

      EXPECTED:

      • No dragging should occur.

      ACTUAL:

      • The application crashes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            santhoshkumar Santhosh Kumar Selvaraj
            mhqanbari MohammadHossein Qanbari
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes